# Local-AI-Assistant

./: .gitignore  Features.md  README.md  TECHNICAL_NOTES.md  config.json  launcher.py  pyproject.toml  requirements-web.txt  run_web.py
.pi/extensions/: browser.json  safe-shell.ts
.pi/skills/code-review/: SKILL.md
.pi/skills/documentation/: SKILL.md
.pi/skills/multi-file-edit/: SKILL.md
app/: index.html  main.py
business_brain/: .gitignore  __init__.py  ask_brain.py  config.json  embeddings.json  gui.py  indexer.py
email_assistant/: config.json  email_assistant.py
email_assistant/output/: email_20260531_152354.txt  email_20260531_153940.txt  email_20260531_154408.txt
email_assistant/templates/: friendly.txt  professional.txt
modules/: __init__.py  chat_history.py
modules/chat_ai/: README.txt  __init__.py  chat.py  config.json  context.py  gui.py  rag.py
modules/email_assistant/: config.json  email_assistant.py
modules/pdf_summarizer/: config.json  pdf_summarizer.py  pdf_summarizer_gui.py
modules/quote_generator/: config.json  quote_generator.py  run.bat
pdf_summarizer/: config.json  pdf_summarizer.py  pdf_summarizer_gui.py  run.bat
pdf_summarizer/output/: summary_20260531_160957.txt  summary_20260531_161734.txt  summary_20260531_162758.txt  summary_20260531_162909.txt  summary_20260531_163050.txt  summary_20260531_163259.txt
quote_generator/: config.json  quote_generator.py  requirements.txt
tests/: conftest.py  test_api.py  test_ask_brain.py  test_chat.py  test_chat_history.py  test_indexer.py
utils/: logging_config.py
(+15 files in other folders)
