[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-assistant"
version = "0.1.0"
description = "100% offline desktop AI assistant for business automation"
requires-python = ">=3.10"
dependencies = [
    "pywebview>=4.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests",
]

[project.optional-dependencies]
pdf = ["pdfplumber", "PyPDF2"]
docx = ["python-docx"]
indexer = ["pdfplumber", "python-docx", "tiktoken"]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
include = ["modules*", "utils*", "business_brain*"]
